# k3s-deploy

./: .env.example  .gitignore  README.md  config.example.json  config.json.example  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/k3s_deploy_cli/: __init__.py  __main__.py  cli_parser.py  cloud_init.py  config.py  config_schema.json  config_utils.py  constants.py  exceptions.py  logging_config.py  main.py  proxmox_client.py  proxmox_core.py  proxmox_vm_discovery.py  proxmox_vm_operations.py  proxmox_vm_provision.py  ssh_operations.py
src/k3s_deploy_cli/commands/: __init__.py  discover_command.py  info_command.py  provision_command.py  vm_operations_command.py
tests/: conftest.py  helpers.py  test_cli_parser.py  test_cloud_init_config.py  test_config.py  test_config_utils.py  test_discover_command.py  test_info_command.py  test_logging_config.py  test_main.py  test_provision_command.py  test_proxmox_client.py  test_proxmox_core.py  test_proxmox_vm_discovery.py  test_proxmox_vm_operations.py  test_proxmox_vm_provision.py  test_ssh_operations.py  test_vm_operations_command.py
tests/fixtures/: helpers.py  mock_data.py
